frontend/src/app/presentation/components/chess-move-list/chess-move-list.component.css
.move-list {
  height: 100%;
  min-height: var(--chess-side-h);
  max-height: var(--chess-side-h);
  overflow-y: scroll;
  display: flex;
  flex-direction: column;
  scrollbar-width: thin;
  scrollbar-color: #ddddddad var(--chess-side-color);
}

.row {
  display: flex;
  justify-content: flex-start;
  column-gap: var(--chess-side-moves-gap);
  font-weight: 600;
  height: 100%;
  min-height: var(--chess-side-move-row-h);
  max-height: var(--chess-side-move-row-h);
  color: white;
  line-height: 30px;
  overflow: hidden;
  padding: 0 15px 0 15px;
  position: relative;
  width: 100%;

  .row-moves {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    column-gap: var(--chess-side-moves-move-gap);
    width: 100%;
  }
}
.row:nth-child(even) {
  background-color: var(--chess-side-even-color);
}

.move-number {
  width: 50px;
  font-size: var(--chess-side-move-text-size);
}

.current-move {
  background-color: #1e1f34b5;
}

.move {
  font-weight: 700;
  cursor: pointer;
  white-space: nowrap;
  line-height: 30px;
  font-size: var(--chess-side-move-text-size);
  min-width: var(--chess-side-moves-size);
  padding-inline: 5px;
}

